updated max body size for larger uploads

--- a/dev/gateway/gateway.conf
+++ b/dev/gateway/gateway.conf
@@ -3,6 +3,7 @@ server {
     server_name  localhost;
 
     location /api {
+        client_max_body_size 1G;
         proxy_pass http://api;
     }
 
