specify type root

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,16 +5,7 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false,
-    "typeRoots": ["node_modules/@types/"],
-    "types": [
-      "angular-ui-router",
-      "angular",
-      "angular-mocks",
-      "jquery",
-      "node",
-      "jasmine",
-      "es6-shim"
-    ]
+    "typeRoots": ["node_modules/@types/"]
   },
   "compileOnSave": false,
   "filesGlob": [
