--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "@types/angular-ui-router": "1.1.36",
     "@types/es6-shim": "0.31.32",
     "@types/jasmine": "2.5.41",
-    "@types/node": "0.0.2",
+    "@types/node": "7.0.5",
     "angular": "1.5.11",
     "angular-animate": "1.5.11",
     "angular-aria": "1.5.11",
     "angular-material": "1.1.3",
+    "angular-material-data-table": "0.10.10",
     "angular-mocks": "1.5.11",
-    "angular-ui-router": "1.0.0-rc.1",
-    "md-data-table": "2.2.0"
+    "angular-ui-router": "1.0.0-rc.1"
   },
   "devDependencies": {
     "gulp-angular-templatecache": "1.8.0",
