--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false,
-    "typeRoots": ["node_modules/@types/"]
+    "moduleResolution": "classic"
   },
   "compileOnSave": false,
   "filesGlob": [
